--- a/HelloHackathon/res/values/strings.xml
+++ b/HelloHackathon/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Autumn Hackathon 2012</string>
     <string name="edit_message">Lets develop apps for Education and Learning</string>
-    <string name="button_send">Change Me!</string>
-    <string name="title_activity_display_message">My Message</string>
+    <string name="button_send">Define me!</string>
+    <string name="title_activity_display_message">Definitions powered by Pearson Longman API</string>
 
 </resources>
